--- a/config/env/.env.example
+++ b/config/env/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-DATABASE_URL=postgresql://postgres:postgres@db:5432/atheon
+DATABASE_URL=postgresql://atheon_user:atheon_password@postgres:5432/atheon
 
 # Kafka Configuration
 KAFKA_BOOTSTRAP_SERVERS=kafka:9092
@@ -20,9 +20,20 @@ JWT_SECRET=your-jwt-secret-key
 JWT_ALGORITHM=HS256
 JWT_EXPIRATION=86400
 
+# AWS Configuration (for S3 storage)
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+AWS_REGION=us-west-2
+AWS_S3_BUCKET=atheon-ai-storage
+
 # Logging
 LOG_LEVEL=DEBUG
 
 # Frontend
 NEXT_PUBLIC_API_URL=http://localhost:8000
 NEXT_PUBLIC_WEBSOCKET_URL=ws://localhost:8000/ws
+
+# Docker Registry
+GITHUB_USERNAME=your-github-username
+GITHUB_TOKEN=your-github-token
+GITHUB_EMAIL=your-github-email
