--- a/infra/kubernetes/orchestrator-deployment.yaml
+++ b/infra/kubernetes/orchestrator-deployment.yaml
@@ -32,31 +32,10 @@ spec:
           limits:
             cpu: "500m"
             memory: "512Mi"
-        env:
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: atheon-secrets
-              key: database-url
-        - name: KAFKA_BOOTSTRAP_SERVERS
-          value: "kafka:9092"
-        - name: JWT_SECRET
-          valueFrom:
-            secretKeyRef:
-              name: atheon-secrets
-              key: jwt-secret
-        - name: OPENAI_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: atheon-secrets
-              key: openai-api-key
-        - name: ANTHROPIC_API_KEY
-          valueFrom:
-            secretKeyRef:
-              name: atheon-secrets
-              key: anthropic-api-key
-        - name: LOG_LEVEL
-          value: "INFO"
+        # Using the Doppler Kubernetes Operator
+        envFrom:
+        - secretRef:
+            name: doppler-env-vars
         livenessProbe:
           httpGet:
             path: /health
