--- a/backend/orchestrator/pyproject.toml
+++ b/backend/orchestrator/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "atheon-orchestrator"
 version = "0.1.0"
-description = "Vertical Agent for Atheon AI - Task Orchestration and HITL Management"
-authors = ["Atheon AI Team"]
+description = "Vertical Agent for Task Orchestration and HITL Management"
+authors = ["Atheon AI Team <info@atheon.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -10,27 +10,22 @@ python = "^3.10"
 fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
-langgraph = "^0.0.19"
-humanlayer = "^0.1.0"
-asyncio = "^3.4.3"
-kafka-python = "^2.0.2"
-anthropic = "^0.5.0"
-openai = "^1.1.1"
+pydantic-settings = "^2.0.3"
 loguru = "^0.7.2"
-prometheus-client = "^0.17.1"
-sqlalchemy = "^2.0.22"
-psycopg2-binary = "^2.9.9"
-python-dotenv = "^1.0.0"
-trulens = "^0.18.0"
+python-jose = "^3.3.0"
+langchain = "^0.0.311"
+langchain-experimental = "^0.0.29"
+aiokafka = "^0.8.1"
+asyncpg = "^0.28.0"
+httpx = "^0.25.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
 pytest-asyncio = "^0.21.1"
 pytest-cov = "^4.1.0"
-black = "^23.10.0"
+black = "^23.9.1"
 isort = "^5.12.0"
-mypy = "^1.6.1"
-pre-commit = "^3.5.0"
+mypy = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -46,7 +41,12 @@ line_length = 88
 
 [tool.mypy]
 python_version = "3.10"
-warn_return_any = true
-warn_unused_configs = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+strict_optional = true
+warn_redundant_casts = true
+warn_return_any = true
+warn_unused_ignores = true
