--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,8 +3,9 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Install dependencies
-COPY package.json package-lock.json* ./
-RUN npm ci
+COPY package.json ./
+# Using npm install instead of npm ci to generate package-lock.json if it doesn't exist
+RUN npm install
 
 # Copy application code
 COPY . .
