--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
-# Python
+# Environment variables and secrets
+.env
+.env.*
+!.env.example
+*.env
+!*.env.example
+secrets/*.env
+!secrets/*.env.example
+k8s/overlays/*/secrets/*.env
+!k8s/overlays/*/secrets/*.env.example
+
+# Doppler configuration
+.doppler*
+
+# Node modules and logs
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Python artifacts
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -15,16 +36,35 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-.pytest_cache/
-.coverage
-htmlcov/
-.tox/
-.nox/
-.hypothesis/
+
+# Poetry
+.venv/
+poetry.lock
+
+# Docker
+.docker/
+
+# Go
+/vendor/
+/Godeps/
+
+# Rust
+/target/
+**/*.rs.bk
+Cargo.lock
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Python
+.Python
 
 # Node.js
 node_modules/
@@ -48,13 +88,7 @@ out/
 *.out
 go.work
 
-# Rust
-/target/
-**/*.rs.bk
-Cargo.lock
-
 # Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
