--- a/backend/orchestrator/Dockerfile
+++ b/backend/orchestrator/Dockerfile
@@ -1,24 +1,62 @@
-FROM python:3.10-slim
+# Stage 1: Build dependencies
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install Poetry
-RUN pip install poetry==1.6.1
+# Install build dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    gcc \
+    libpq-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy poetry configuration files
+# Install Poetry
+RUN pip install --no-cache-dir poetry==1.6.1
+
+# Copy only requirements to cache dependencies
 COPY pyproject.toml poetry.lock* ./
 
-# Configure poetry to not use a virtual environment
+# Configure poetry to not use virtualenv
 RUN poetry config virtualenvs.create false
 
 # Install dependencies
 RUN poetry install --no-dev --no-interaction --no-ansi
 
+# Stage 2: Runtime
+FROM python:3.11-slim
+
+WORKDIR /app
+
+# Create non-root user
+RUN addgroup --system --gid 1001 appuser \
+    && adduser --system --uid 1001 --gid 1001 appuser
+
+# Install runtime dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libpq5 \
+    curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy installed dependencies from builder
+COPY --from=builder /usr/local/lib/python3.11/site-packages /usr/local/lib/python3.11/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 # Copy application code
 COPY . .
+
+# Set proper permissions
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
 
 # Expose the port the app runs on
 EXPOSE 8000
 
-# Command to run the application
-CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
+
+# Run the application
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
