--- a/backend/orchestrator/pyproject.toml
+++ b/backend/orchestrator/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Atheon AI Team <info@atheon.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
 pydantic = "^2.4.2"
@@ -15,9 +15,14 @@ loguru = "^0.7.2"
 python-jose = "^3.3.0"
 langchain = "^0.0.311"
 langchain-experimental = "^0.0.29"
+langgraph = "^0.0.19"
 aiokafka = "^0.8.1"
 asyncpg = "^0.28.0"
 httpx = "^0.25.0"
+openai = "^1.3.6"
+anthropic = "^0.5.0"
+humanlayer = "^0.2.0"
+pre-commit = "^3.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
