--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -1,16 +1,20 @@
 version: '3.8'
 
+# Backend services only docker-compose file
+# Always run with: doppler run -- docker-compose -f docker-compose.backend.yml up -d
+# This ensures all necessary environment variables are injected from Doppler
+
 services:
   orchestrator:
     build:
       context: ./backend/orchestrator
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "8000:8000"
     volumes:
       - ./backend/orchestrator:/app
     environment:
-      # Examples of environment variables that will be loaded via Doppler
+      # These variables will be loaded from Doppler
       - DATABASE_URL
       - KAFKA_BOOTSTRAP_SERVERS
       - JWT_SECRET
@@ -18,12 +22,13 @@ services:
       - ANTHROPIC_API_KEY
       - HUGGINGFACE_API_KEY
       - LOG_LEVEL
-    env_file:
-      - .env # This will be populated by Doppler when running with doppler run
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
       postgres:
         condition: service_healthy
       kafka:
+        condition: service_started
+      redis:
         condition: service_started
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -32,25 +37,104 @@ services:
       retries: 3
       start_period: 40s
     restart: unless-stopped
+    networks:
+      - atheon-network
+
+  scraper:
+    build:
+      context: ./backend/agents/scraper
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./backend/agents/scraper:/app
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC_IN=scrape_requests
+      - KAFKA_TOPIC_OUT=scrape_results
+      - KAFKA_GROUP_ID=scraper_group
+      - MAX_CONCURRENCY=10
+      - USER_AGENT=Atheon-AI Web Scraper
+      - LOG_LEVEL
+    depends_on:
+      kafka:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    networks:
+      - atheon-network
+
+  data_fetcher:
+    build:
+      context: ./backend/agents/data_fetcher
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8081"
+    volumes:
+      - ./backend/agents/data_fetcher:/app
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC_IN=data_fetch_requests
+      - KAFKA_TOPIC_OUT=data_fetch_results
+      - KAFKA_GROUP_ID=data_fetcher_group
+      - API_REQUEST_TIMEOUT=30
+      - POLL_INTERVAL=1000
+      - LOG_LEVEL
+    depends_on:
+      kafka:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    networks:
+      - atheon-network
 
   postgres:
     image: postgres:15
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-atheon_user}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-atheon_password}
-      - POSTGRES_DB=${POSTGRES_DB:-atheon}
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./database/schema.sql:/docker-entrypoint-initdb.d/schema.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-atheon_user} -d ${POSTGRES_DB:-atheon}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
     restart: unless-stopped
+    networks:
+      - atheon-network
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+    restart: unless-stopped
+    networks:
+      - atheon-network
 
   kafka:
     image: bitnami/kafka:latest
@@ -74,20 +158,24 @@ services:
       retries: 3
       start_period: 30s
     restart: unless-stopped
+    networks:
+      - atheon-network
 
   adminer:
     image: adminer
     ports:
-      - "8080:8080"
+      - "8082:8080"
     depends_on:
       postgres:
         condition: service_healthy
     restart: unless-stopped
+    networks:
+      - atheon-network
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
     ports:
-      - "8081:8080"
+      - "8083:8080"
     environment:
       - KAFKA_CLUSTERS_0_NAME=atheon-kafka
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
@@ -95,7 +183,14 @@ services:
       kafka:
         condition: service_started
     restart: unless-stopped
+    networks:
+      - atheon-network
 
 volumes:
   postgres_data:
   kafka_data:
+  redis_data:
+
+networks:
+  atheon-network:
+    driver: bridge
